# src/controllers/types/category-request.type.ts
@@ -1,0 +1,10 @@
+// Interface describe the category create request
+export interface CategoryCreateRequest {
+    name: string;
+    description: string;
+}
+
+export interface CategoryUpdateRequest {
+    name: string;
+    description: string;
+}
