# src/controllers/types/category-response.type.ts
@@ -1,0 +1,7 @@
+import { ICategory } from "../../database/models/category.model";
+
+// Interface describe the Category response
+export interface CategoryResponse{
+    message:string,
+    data:ICategory
+}
